--- a/.gitignore
+++ b/.gitignore
@@ -46,12 +46,7 @@ mod_ssi_exprparser.h
 scgi-responder
 sconsbuild/
 stamp-h1
-test_array
-test_base64
-test_buffer
-test_burl
-test_keyvalue
+test_common
 test_configfile
 test_mod
-test_request
 versionstamp.h
