--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,6 +26,7 @@ option(WITH_NSS "with NSS-crypto-support [default: off]")
 option(WITH_OPENSSL "with openssl-support [default: off]")
 option(WITH_WOLFSSL "with wolfSSL-support [default: off]")
 option(WITH_NETTLE "with Nettle-support [default: off]")
+option(WITH_PCRE2 "with regex support [default: off]")
 option(WITH_PCRE "with regex support [default: on]" ON)
 option(WITH_WEBDAV_PROPS "with property-support for mod_webdav [default: off]")
 option(WITH_WEBDAV_LOCKS "locks in webdav [default: off]")
@@ -255,7 +256,11 @@ macro(XCONFIG _package _include_DIR _link_DIR _link_FLAGS _cflags)
 		set(XCONFIG_EXECUTABLE "${${_package}CONFIG_EXECUTABLE}")
 		message(STATUS "found ${_package}: ${XCONFIG_EXECUTABLE}")
 
-		exec_program(${XCONFIG_EXECUTABLE} ARGS --libs OUTPUT_VARIABLE __link_FLAGS)
+		if(${_package} EQUAL "pcre2-config")
+			exec_program(${XCONFIG_EXECUTABLE} ARGS --libs8 OUTPUT_VARIABLE __link_FLAGS)
+		else()
+			exec_program(${XCONFIG_EXECUTABLE} ARGS --libs OUTPUT_VARIABLE __link_FLAGS)
+		endif()
 		string(REPLACE "\n" "" ${_link_FLAGS} ${__link_FLAGS})
 		exec_program(${XCONFIG_EXECUTABLE} ARGS --cflags OUTPUT_VARIABLE __cflags)
 		string(REPLACE "\n" "" ${_cflags} ${__cflags})
@@ -467,7 +472,55 @@ if(WITH_GNUTLS)
 	endif()
 endif()
 
-if(WITH_PCRE)
+if(WITH_PCRE2)
+	## if we have pcre2-config, use it
+	xconfig(pcre2-config PCRE_INCDIR PCRE_LIBDIR PCRE_LDFLAGS PCRE_CFLAGS)
+	if(PCRE_LDFLAGS OR PCRE_CFLAGS)
+		message(STATUS "found pcre2 at: LDFLAGS: ${PCRE_LDFLAGS} CFLAGS: ${PCRE_CFLAGS}")
+
+		if(NOT PCRE_CFLAGS STREQUAL "\n")
+			## if it is empty we'll get newline returned
+			set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${PCRE_CFLAGS}")
+		endif()
+
+		set(HAVE_PCRE2_H 1)
+		set(HAVE_PCRE 1)
+	else()
+		if(NOT WIN32)
+			check_include_files(pcre2.h HAVE_PCRE_H)
+			check_library_exists(pcre2-8 pcre_match "" HAVE_PCRE)
+			set(PCRE_LDFLAGS -lpcre2-8)
+		else()
+			find_path(PCRE_INCLUDE_DIR pcre2.h
+			/usr/local/include
+			/usr/include
+			)
+
+			set(PCRE_NAMES pcre2-8)
+			find_library(PCRE_LIBRARY
+			NAMES ${PCRE_NAMES}
+			PATHS /usr/lib /usr/local/lib
+			)
+
+			if(PCRE_INCLUDE_DIR AND PCRE_LIBRARY)
+				set(CMAKE_REQUIRED_INCLUDES ${PCRE_INCLUDE_DIR})
+				set(CMAKE_REQUIRED_LIBRARIES ${PCRE_LIBRARY})
+				check_include_files(pcre2.h HAVE_PCRE2_H)
+				check_library_exists(pcre2-8 pcre_match "" HAVE_PCRE)
+				set(CMAKE_REQUIRED_INCLUDES)
+				set(CMAKE_REQUIRED_LIBRARIES)
+				include_directories(${PCRE_INCLUDE_DIR})
+			endif()
+		endif()
+	endif()
+
+	if(NOT HAVE_PCRE2_H)
+		message(FATAL_ERROR "pcre2.h couldn't be found")
+	endif()
+	if(NOT HAVE_PCRE)
+		message(FATAL_ERROR "libpcre2-8 couldn't be found")
+	endif()
+elseif(WITH_PCRE)
 	## if we have pcre-config, use it
 	xconfig(pcre-config PCRE_INCDIR PCRE_LIBDIR PCRE_LDFLAGS PCRE_CFLAGS)
 	if(PCRE_LDFLAGS OR PCRE_CFLAGS)
@@ -479,11 +532,11 @@ if(WITH_PCRE)
 		endif()
 
 		set(HAVE_PCRE_H 1)
-		set(HAVE_LIBPCRE 1)
+		set(HAVE_PCRE 1)
 	else()
 		if(NOT WIN32)
 			check_include_files(pcre.h HAVE_PCRE_H)
-			check_library_exists(pcre pcre_exec "" HAVE_LIBPCRE)
+			check_library_exists(pcre pcre_exec "" HAVE_PCRE)
 			set(PCRE_LDFLAGS -lpcre)
 		else()
 			find_path(PCRE_INCLUDE_DIR pcre.h
@@ -501,7 +554,7 @@ if(WITH_PCRE)
 				set(CMAKE_REQUIRED_INCLUDES ${PCRE_INCLUDE_DIR})
 				set(CMAKE_REQUIRED_LIBRARIES ${PCRE_LIBRARY})
 				check_include_files(pcre.h HAVE_PCRE_H)
-				check_library_exists(pcre pcre_exec "" HAVE_LIBPCRE)
+				check_library_exists(pcre pcre_exec "" HAVE_PCRE)
 				set(CMAKE_REQUIRED_INCLUDES)
 				set(CMAKE_REQUIRED_LIBRARIES)
 				include_directories(${PCRE_INCLUDE_DIR})
@@ -512,12 +565,12 @@ if(WITH_PCRE)
 	if(NOT HAVE_PCRE_H)
 		message(FATAL_ERROR "pcre.h couldn't be found")
 	endif()
-	if(NOT HAVE_LIBPCRE)
+	if(NOT HAVE_PCRE)
 		message(FATAL_ERROR "libpcre couldn't be found")
 	endif()
 else()
 	unset(HAVE_PCRE_H)
-	unset(HAVE_LIBPCRE)
+	unset(HAVE_PCRE)
 endif()
 
 if(WITH_SASL)
@@ -895,7 +948,7 @@ add_executable(test_common
 )
 add_test(NAME test_common COMMAND test_common)
 
-if(HAVE_PCRE_H)
+if(HAVE_PCRE)
 	target_link_libraries(lighttpd ${PCRE_LDFLAGS})
 	add_target_properties(lighttpd COMPILE_FLAGS ${PCRE_CFLAGS})
 	target_link_libraries(test_common ${PCRE_LDFLAGS})
@@ -906,7 +959,7 @@ if(HAVE_PCRE_H)
 	add_target_properties(test_mod COMPILE_FLAGS ${PCRE_CFLAGS})
 endif()
 
-if(WITH_PCRE AND (WITH_MEMCACHED OR WITH_GDBM))
+if(HAVE_PCRE AND (WITH_MEMCACHED OR WITH_GDBM))
 	add_and_install_library(mod_trigger_b4_dl mod_trigger_b4_dl.c)
 endif()
 
