--- a/meson_options.txt
+++ b/meson_options.txt
@@ -98,6 +98,11 @@ option('with_pam',
 	value: false,
 	description: 'with PAM-support for mod_auth [default: off]',
 )
+option('with_pcre2',
+	type: 'boolean',
+	value: false,
+	description: 'with regex support [default: off]',
+)
 option('with_pcre',
 	type: 'boolean',
 	value: true,
