--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,8 +26,8 @@ option(WITH_NSS "with NSS-crypto-support [default: off]")
 option(WITH_OPENSSL "with openssl-support [default: off]")
 option(WITH_WOLFSSL "with wolfSSL-support [default: off]")
 option(WITH_NETTLE "with Nettle-support [default: off]")
-option(WITH_PCRE2 "with regex support [default: off]")
-option(WITH_PCRE "with regex support [default: on]" ON)
+option(WITH_PCRE2 "with regex support [default: on]" ON)
+option(WITH_PCRE "with regex support [default: off]")
 option(WITH_WEBDAV_PROPS "with property-support for mod_webdav [default: off]")
 option(WITH_WEBDAV_LOCKS "locks in webdav [default: off]")
 option(WITH_BROTLI "with brotli-support for mod_deflate [default: off]")
