[doc] SELinux: setsebool -P httpd_setrlimit on
document setrlimit() under SELinux may need one-time setup
  setsebool -P httpd_setrlimit on

--- a/doc/config/lighttpd.conf
+++ b/doc/config/lighttpd.conf
@@ -208,6 +208,9 @@ include conf_dir + "/conf.d/debug.conf"
 ## By default lighttpd would not change the operation system default.
 ## But setting it to 16384 is a better default for busy servers.
 ##
+## With SELinux enabled, this is denied by default and needs to be allowed
+## by running the following once: setsebool -P httpd_setrlimit on
+##
 server.max-fds = 16384
 
 ##
