--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -462,7 +462,7 @@ if(WITH_MBEDTLS)
 		check_library_exists(mbedcrypto mbedtls_base64_encode "" HAVE_LIBMBEDCRYPTO)
 		if(HAVE_LIBMBEDCRYPTO)
 			set(CRYPTO_LIBRARY mbedcrypto)
-			check_library_exists(mbedtls mbedtls_cipher_info_from_type "" HAVE_LIBMBEDTLS)
+			check_library_exists(mbedtls mbedtls_ssl_init "" HAVE_LIBMBEDTLS)
 			if(HAVE_LIBMBEDTLS)
 			    check_library_exists(mbedx509 mbedtls_x509_get_name "" HAVE_LIBMBEDX509)
 			endif()
