[build] add headers for sendfile() detect on MacOS
(thx ryandesign)

x-ref:
  https://github.com/macports/macports-ports/commit/d636f118f49297c7e35d57444f64021f7ce45bc5

--- a/configure.ac
+++ b/configure.ac
@@ -1612,6 +1612,9 @@ if test "$ac_cv_func_sendfile" = yes; then
         #include <sys/sendfile.h>
         #endif /* HAVE_SYS_SENDFILE_H */
         #include <errno.h>
+        #include <sys/types.h>
+        #include <sys/socket.h>
+        #include <sys/uio.h>
         int main() {
           int o = 0;
           if (-1 == sendfile(-1, 0, &o, 0) && errno == ENOSYS) return -1;
