[core] server.core-files support on FreeBSD (fixes #3128)
(thx devnexen)

x-ref:
  "server.core-files support on FreeBSD proposal"
  https://redmine.lighttpd.net/issues/3128

--- a/configure.ac
+++ b/configure.ac
@@ -113,6 +113,7 @@ AC_CHECK_HEADERS([\
   sys/mman.h \
   sys/poll.h \
   sys/prctl.h \
+  sys/procctl.h \
   sys/resource.h \
   sys/select.h \
   sys/sendfile.h \
