--- a/src/meson.build
+++ b/src/meson.build
@@ -36,6 +36,7 @@ conf_data.set('HAVE_SYS_LOADAVG_H', compiler.has_header('sys/loadavg.h'))
 conf_data.set('HAVE_SYS_MMAN_H', compiler.has_header('sys/mman.h'))
 conf_data.set('HAVE_SYS_POLL_H', compiler.has_header('sys/poll.h'))
 conf_data.set('HAVE_SYS_PRCTL_H', compiler.has_header('sys/prctl.h'))
+conf_data.set('HAVE_SYS_PROCCTL_H', compiler.has_header('sys/procctl.h'))
 conf_data.set('HAVE_SYS_RESOURCE_H', compiler.has_header('sys/resource.h'))
 conf_data.set('HAVE_SYS_SENDFILE_H', compiler.has_header('sys/sendfile.h'))
 conf_data.set('HAVE_SYS_SELECT_H', compiler.has_header('sys/select.h'))
