--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -98,6 +98,7 @@ check_include_files(sys/mman.h HAVE_SYS_MMAN_H)
 check_include_files(sys/loadavg.h HAVE_SYS_LOADAVG_H)
 check_include_files(sys/poll.h HAVE_SYS_POLL_H)
 check_include_files(sys/prctl.h HAVE_SYS_PRCTL_H)
+check_include_files(sys/procctl.h HAVE_SYS_PROCCTL_H)
 check_include_files(sys/resource.h HAVE_SYS_RESOURCE_H)
 check_include_files(sys/sendfile.h HAVE_SYS_SENDFILE_H)
 check_include_files(sys/select.h HAVE_SYS_SELECT_H)
